--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "express": "^4.18.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mssql": "^8.1.0"
+    "mssql": "^8.1.0",
+    "nodemailer": "^6.7.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mssql": "^7.1.5",
+    "@types/nodemailer": "^6.4.4",
     "nodemon": "^2.0.16"
   }
 }
